修改一个错别字
如题

--- a/笔记/输入网址后发生了什么.md
+++ b/笔记/输入网址后发生了什么.md
@@ -4,7 +4,7 @@
 ## 2.浏览器查找域名对应IP ##
 ### 2.1 DNS查找过程：
 　　浏览器缓存——浏览器会记录DNS一段时间（2-30分钟不等，视浏览器而定）  
-　　系统缓存——浏览器里没找到DNS缓存，此事浏览器做一个系统调用（window下是gethostbyname）。如发现匹配则采用。（与此对应有host恶意劫持更改攻击）  
+　　系统缓存——浏览器里没找到DNS缓存，此时浏览器做一个系统调用（window下是gethostbyname）。如发现匹配则采用。（与此对应有host恶意劫持更改攻击） 
 　　路由器缓存——路由器也会有DNS缓存（缓存你上过的网站，所以有时路由器需要进行DNS刷新）  
 　　ISP DNS缓存——接下来是在ISP（互联网服务提供商）的DNS服务器的缓存上查找。  
 　　递归查找——DNS缓存里没有的话，ISP DNS服务器会先后从根域名服务器（root）、.com顶级域名服务器、Facebook域名服务器获取IP（一般缓存内都会有，所以这一步一般不会发生）   
